[project]
name = ""
version = "0.0.1"
authors = [
    {name="Josh Boothroyd", email="animosolus@gmail.com"}
]
description="A package to aid in the backtesting of trading alghorithms."
readme="README.md"
requires-python=">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",  
]

[project.urls]
"Homepage" = "https://github.com/animosolus/Fincher"
"Bug tracker" = "https://github.com/animosolus/Fincher/issues"